fix overflow issue for footnotes on mobile

--- a/css/overrides.css
+++ b/css/overrides.css
@@ -248,5 +248,10 @@ table tr:nth-child(2n) {
     .meta-pair::before {
 	content: "";
     }
+
+    .margin-toggle:checked + .sidenote,
+    .margin-toggle:checked + .marginnote {
+	float: none;
+    }
 }
 
